src/recipe/style.scss
/**
 * #.# Styles
 *
 * CSS for both Frontend+Backend.
 */

$image-padding: 2vw;
$second-and-on-image-max-height: 10vh;
$first-image-max-height: 75vh;

.fdd-recipe--page { // [global]
  .fdd-recipe--text {
    @include base-font-family-set();
    .fdd-recipe--chars {
      display: flex;
      flex-wrap: wrap;
      align-items: center;
      padding: 3em 0;
      justify-content: space-between;
      div {
        width: 100%;
        padding: 1px 0;
        //text-align: center;
      }
      div.fdd-recipe--chars--level {
        //width: 100%;
        //text-align: center;
        &.easy {
          color: green;
        }
        &.expert {
          color: royalblue;
        }
      }
      div::before {
        color: $base-fdd-text-color;
        font-weight: bold;
      }
      .fdd-recipe--chars--level::before {
        content: "Level: ";
      }
      .fdd-recipe--chars--prep_time::before {
        content: "Prep Time: ";
      }
      .fdd-recipe--chars--cook_time::before {
        content: "Cook Time: ";
      }
      .fdd-recipe--chars--portions::before {
        content: "Portions: ";
      }
    }
  }
} // .fdd-recipe--page [global]

@mixin space-between-for-images {
  .fdd-recipe--page {
    .fdd-recipe--media {
      justify-content: space-between;
      margin-left: -$image-padding / 2;
      margin-right: -$image-padding / 2;
      padding-right: 0;

      figure {
        margin-left: $image-padding / 2;
        margin-right: $image-padding / 2;
        img {
          padding: 0;
        }
      }
    }
  }
}

/**********************************************************
  Wide screen 
 **********************************************************/

@media screen and (min-width: $fdd-wide-width-pixels) {

.category-recipes {
  .single__title {
    @include title__float_right()
  }
}

.fdd-recipe--page {
  .fdd-recipe--text {
    float: right;
    clear: right;
    width: 40%;
    padding: 0 $fdd-outer-padding-wide-screen 0 $fdd-inner-padding-wide-screen;
    .fdd-titled-para {
      margin-bottom: 4em;
      &.is-style-two-columns {
        .fdd-titled-para__inner {
          ul, ol {
            columns: 12em 2;
            column-gap: $fdd-outer-padding-narrow-screen * 2;
            li {
              break-inside: avoid;
            }
            li:last-child {
              padding-bottom: 2em;
            }
          }
        }
      }
    }
  }

  .fdd-recipe--media {
    float: left;
    clear: left;
    width: 60%;
    padding-left: 0; //$fdd-outer-padding-wide-screen;
    padding-right: $fdd-inner-padding-wide-screen;

    // To align the images on the left with the header's top line
    // VERY ROUGH ESTIMATION!  Sensitive to change of the default text size in typography
    margin-top: 37px;
    position: sticky;
    top: 50px;

    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    
    figure {
      min-width: 0;
      margin: 0;
      img {
        margin-bottom: $image-padding;
        display: block;
        padding-left: $image-padding / 2;
        padding-right: $image-padding / 2;
        //padding-left: $image-padding;
        //padding-right: 0;
        max-height: $second-and-on-image-max-height;
      }
    }
    figure.wp-block-image:first-child {
      width: 100%;
      img {
        padding-left: 0;
        padding-right: 0;
        margin-left: auto;
        margin-right: auto;
        display: block;
        width: 100%;
        max-height: $first-image-max-height;
        
        object-fit: contain;
        //object-fit: cover;
        object-position: 50% 50%;
        clear: both;
      }
    }
    figure.wp-block-embed.is-style-vertical:first-child {
      width: 80%;
    }
  }
}

// Comment out if the centered semi-random layout for image thumbnails is more desired
//@include space-between-for-images()

} // @media screen and (min-width: $fdd-wide-width-pixels)


/**********************************************************
  Narrow screen
 **********************************************************/

@media screen and (max-width: $fdd-wide-width-pixels - 1px) {

.category-recipes {
  .single__title {
    @include title__centered();
  }
}

.fdd-recipe--page {
  .fdd-recipe--text {
    width: 100%;
    padding: 0 $fdd-outer-padding-narrow-screen;
    .fdd-titled-para {
      margin-bottom: 3em;
      /*
      .fdd-titled-para__title {
        border-top: 1px $base-fdd-text-color solid;
      }
      */
      &.is-style-two-columns {
        .fdd-titled-para__inner {
          ul, ol {
            columns: 18em 2;
            column-gap: $fdd-outer-padding-narrow-screen;
            li {
              break-inside: avoid;
            }
            li:last-child {
              padding-bottom: 3em;
            }
          }
        }
      }
    }
  }

  .fdd-recipe--media {
    padding-left: $fdd-outer-padding-narrow-screen;
    padding-right: $fdd-outer-padding-narrow-screen;
    width: 100%;
    display: inline-block;
    img, figure.wp-block-embed {
      display: block;
      margin-left: auto;
      margin-right: auto;
      min-width: 0;
      max-width: 100%;
      max-height: 66vh;
    }
    figure.wp-block-embed {
      width: 100%;
      clear: both;
      max-height: inherit;
      &.is-style-vertical {
        padding: 0;
      }
    }
  }
}

} // @media screen and (max-width: $fdd-wide-width-pixels - 1px)


/**********************************************************
  Super-narrow screen
 **********************************************************/

@media screen and (max-width: $fdd-narrow-width-pixels - 1px) {

.fdd-recipe--page { // [global]
  .fdd-recipe--text {
    .fdd-recipe--chars {
      div {
        width: 100%;
        padding: .25em 0;
      }
    }
    .fdd-titled-para {
      .fdd-titled-para__inner {
        ul, ol {
          li:last-child {
            padding-bottom: 0;
          }
        }
      }
    }
  }
}

}

